# Argus

./: .commit_msg.tmp  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.example.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: approval_ui.py  context.py  curator.py  doctor.py  engine.py  errors.py  failure_log.py  insights.py  lessons.py  llm_client.py  memory.py  memory_md.py  memory_migrate.py  prompts.py  recon_modes.py  session.py  session_index.py  skill_extractor.py  skill_interop.py  skills.py  subagent.py  tool_registry.py  user_profile.py
argus_native/: Cargo.toml  README.md  pyproject.toml
argus_native/src/: lib.rs  memory.rs  sanitizer.rs
docs/: architecture.md
docs/benchmarks/: 20260508_072359.md  L3-mimo-vs-deepseek.md  L4-fault-injection.md  recon-2026-05-08.md
docs/demo-reports/: dvwa-v1.10-scan.md
docs/eval/20260508_074418/: A1_log.txt  A1_report.md  A2_log.txt  A2_report.md  A3_log.txt  B1_log.txt  B1_report.md  B2_log.txt  B2_report.md  B3_log.txt  B3_report.md  C1_log.txt  C1_report.md  C2_log.txt  C2_report.md  findings.md  raw_metrics.json  summary.md
docs/eval/20260508_101413_e2e/: A1_log.txt  A1_report.md  A2_log.txt  A2_report.md  D1_log.txt  D1_report.md  D2_log.txt  findings_e2e.md  raw_metrics.json
docs/eval/20260508_113347_e2e/: A1_log.txt  A1_report.md  A2_log.txt  A2_report.md  D1_log.txt  D1_report.md  D2_log.txt  D2_report.md  findings_e2e.md  raw_metrics.json
docs/harness_audit/: persona_audit.json  persona_audit.md  prompts_pre_B2_backup.py
scripts/: __init__.py  cold_smoke.py  eval_e2e.py  eval_runner.py  harness_audit.py
tests/: conftest.py  test_approval_ui.py  test_auth_login.py  test_browser_extras.py  test_browser_headless_fallback.py  test_browser_pool.py  test_browser_pool_idle_deadlock.py  test_browser_recovery.py  test_browser_self_bugs.py  test_bug_fixes_issue20.py  test_cli_oneshot.py  test_config_singleton.py  test_context_compress.py  test_crawl_js.py  test_credentials.py  test_curator.py  test_dir_bruteforce.py  test_dir_bruteforce_budget.py  test_doctor.py  test_engine_acl.py  test_engine_consecutive_failures.py  test_errors.py  test_errors_classify.py  test_failure_replay.py  test_http_session.py  test_insights.py  test_interrupt.py  test_l4_fault_injection.py  test_lessons.py  test_llm_provider_mimo.py  test_main_imports.py  test_memory_md.py  test_native_shim.py  test_progress.py  test_project_store.py  test_rate_limiter.py  test_recon_helpers.py  test_recon_wordlists.py  test_report_lessons.py  test_report_summary.py  (+19 more)
tests/fixtures/: sample_chaoxing.js
tools/: _rdap.py  _report_lessons.py  _report_summary.py  _report_topology.py  _subdomains_seclists.py  auth.py  browser.py  crawler.py  devtools.py  file_ops.py  http_client.py  memory_tools.py  project_store.py  recon.py  recon_wordlists.py  report.py  request_replay.py  session_tools.py  skill_tools.py  subagent_tools.py  system_info.py  vuln_scan.py
utils/: _native.py  authorization.py  config.py  credentials.py  interrupt.py  logger.py  paths.py  progress.py  rate_limiter.py  safe_path.py  sanitizer.py  scrub.py  ui.py
