[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-agent"
version = "0.1.0"
description = "网络安全信息收集 AI Agent"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "litellm>=1.40",
    "httpx>=0.27",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "tiktoken>=0.7",
    "aiosqlite>=0.20",
    "dnspython>=2.6",
    "python-nmap>=0.7",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "types-toml",
]

[project.urls]
Homepage = "https://github.com/ArgusLogic/Argus"
Repository = "https://github.com/ArgusLogic/Argus"
Issues = "https://github.com/ArgusLogic/Argus/issues"

[project.scripts]
argus = "main:cli_entry"

[tool.setuptools]
py-modules = ["main"]
packages = ["agent", "tools", "utils"]

# ─── Ruff (linter + formatter) ────────────────────────────────────────
[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "output",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles it)
    "B008",  # function call in default arg (FastAPI/typer pattern)
    "SIM108", # ternary if-else (sometimes less readable)
    "RUF001", # ambiguous unicode (中文字符串里很常见)
    "RUF002", # 同上 in docstrings
    "RUF003", # 同上 in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F401", "F811"]
"main.py" = ["E402"]  # 部分 import 在条件分支里

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy (类型检查) ───────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false  # 渐进式：先不强制
no_implicit_optional = true
exclude = [
    "build/",
    "output/",
    "tests/",
]

[[tool.mypy.overrides]]
module = ["litellm.*", "playwright.*", "nmap.*", "dns.*", "aiosqlite.*"]
ignore_missing_imports = true

# ─── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: 标记慢测试（默认跳过）",
    "integration: 集成测试（需要外部服务）",
]

[tool.coverage.run]
source = ["agent", "tools", "utils"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
