[package]
name = "argus_native"
version = "0.1.0"
edition = "2021"
description = "Rust hot-path acceleration for Argus (sanitizer + memory_md)"
license = "MIT"
repository = "https://github.com/ArgusLogic/Argus"
authors = ["Argus contributors"]

[lib]
name = "argus_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
regex = "1.10"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
