[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "argus_native"
version = "0.1.0"
description = "Rust hot-path acceleration for Argus"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
strip = true
